# monaco-qt

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
monaco/: __init__.py  index.html  index.js  monaco_widget.py
