[project]
name = "monaco-qt"
version = "0.2.0"
description = "The Monaco editor as a Qt Widget"
readme = "README.md"
authors = [{ name = "David Kincaid", email = "daelonsuzuka@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Widget Sets",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["qtstrap", "qt", "pyqt", "monaco", "text editor"]
requires-python = ">= 3.9"
dependencies = ["qtpy"]

[project.urls]
Homepage = "https://github.com/DaelonSuzuka/monaco-qt"
Repository = "https://github.com/DaelonSuzuka/monaco-qt"
Issues = "https://github.com/qtstrap/qtstrap/issues"

[tool.uv]
package = true
dev-dependencies = [
    "PySide6>=6.7.0",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "twine"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"